--- a/src/component/Home.style.module.css
+++ b/src/component/Home.style.module.css
@@ -15,9 +15,13 @@
     margin    : 0 auto;
 }
 
+.icon_bg_color {
+    background-color: #E4FEFF;
+}
+
 .icons:hover {
-    transform       : scale(1.5);
-    border-radius   : 50%;
+    transform    : scale(1.3);
+    border-radius: 50%;
 }
 
 
@@ -27,18 +31,14 @@
     font-weight: normal;
 }
 
-.class_teacher span {
-    font-size  : 12px;
-    font-weight: bold;
-    text-align : center;
-}
 
 .session,
 .horizontal_bar,
 .branch {
-    color: #0fc7c7;
+    color    : #0fc7c7;
     font-size: 14px;
 }
+
 .subject {
     font-size  : 20px;
     text-align : center;
@@ -50,6 +50,7 @@
     font-weight: bold;
     text-align : center;
 }
+
 .cardDesc {
     color        : #0fc7c7;
     border       : 1px solid #9fdbdb51;
@@ -58,3 +59,36 @@
     font-size    : 8px;
 }
 
+/* class six subject start */
+.class_six_branch {
+    font-size  : 12px;
+    text-align : center;
+    font-weight: normal;
+    color      : #B4D0D2;
+}
+
+.class_six_branch span {
+    font-size    : 12px;
+    text-align   : center;
+    font-weight  : normal;
+    color        : #A9E17D;
+    border       : 1px solid #A9E17D;
+    padding      : 0px 1px;
+    border-radius: 2px;
+}
+
+.class_six_topics {
+    font-size  : 14px;
+    font-weight: bold;
+    text-align : center;
+    color      : #769B9C;
+}
+
+.class_six_std_name {
+    font-size  : 14px;
+    font-weight: bold;
+    text-align : center;
+    color      : #B4D0D2;
+}
+
+/* class six subject end */
