--- a/src/component/Home.style.module.css
+++ b/src/component/Home.style.module.css
@@ -93,17 +93,27 @@
 
 /* class six subject end */
 /* teacher info list start */
-.teacher_info_list{
-   background-color: #9fdbdb51;
-   border-radius: 50%;
-   padding: 3px;
-}
-.OutlineDotsVertical{
+.teacher_info_list {
     background-color: #9fdbdb51;
-   border-radius: 50%;
-   padding: 3px;
+    border-radius   : 50%;
+    padding         : 3px;
 }
-.teacher_info_list_group{
+
+.OutlineDotsVertical {
+    background-color: #9fdbdb51;
+    border-radius   : 50%;
+    padding         : 3px;
+}
+
+.teacher_info_list_group {
     width: 50%;
 }
+
 /* teacher info list start */
+/* nav tab start */
+.nav_tab_bottom_border:hover {
+    border-bottom: 2px solid #428F92;
+    padding-top  : 0px;
+}
+
+/* nav tab end */
