--- a/src/component/Home.style.module.css
+++ b/src/component/Home.style.module.css
@@ -117,3 +117,9 @@
 }
 
 /* nav tab end */
+/* shikhon kalin mollaion start */
+.card_hover:hover {
+    background-color: #D2D2D2;
+}
+
+/* shikhon kalin mollaion end */
