--- a/src/component/Home.style.module.css
+++ b/src/component/Home.style.module.css
@@ -1,125 +1,151 @@
 .teacherName {
-    font-size  : 12px;
-    font-weight: 400;
-    font-style : normal;
+  font-size: 12px;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .deg {
-    font-size  : 10px;
-    font-weight: 400;
-    font-style : normal;
+  font-size: 10px;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .icons {
-    transition: transform .2s;
-    margin    : 0 auto;
+  transition: transform 0.2s;
+  margin: 0 auto;
 }
 
 .icon_bg_color {
-    background-color: #E4FEFF;
+  background-color: #e4feff;
 }
 
 .icons:hover {
-    transform    : scale(1.3);
-    border-radius: 50%;
+  transform: scale(1.3);
+  border-radius: 50%;
 }
-
 
 .class_teacher {
-    font-size  : 12px;
-    text-align : center;
-    font-weight: normal;
+  font-size: 12px;
+  text-align: center;
+  font-weight: normal;
 }
-
 
 .session,
 .horizontal_bar,
 .branch {
-    color    : #0fc7c7;
-    font-size: 14px;
+  color: #0fc7c7;
+  font-size: 14px;
 }
 
 .subject {
-    font-size  : 20px;
-    text-align : center;
-    font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
 }
 
 .std_class {
-    font-size  : 14px;
-    font-weight: bold;
-    text-align : center;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .cardDesc {
-    color        : #0fc7c7;
-    border       : 1px solid #9fdbdb51;
-    padding      : 2px 2px;
-    border-radius: 20px;
-    font-size    : 8px;
+  color: #0fc7c7;
+  border: 1px solid #9fdbdb51;
+  padding: 2px 2px;
+  border-radius: 20px;
+  font-size: 8px;
 }
 
 /* class six subject start */
 .class_six_branch {
-    font-size  : 12px;
-    text-align : center;
-    font-weight: normal;
-    color      : #B4D0D2;
+  font-size: 12px;
+  text-align: center;
+  font-weight: normal;
+  color: #b4d0d2;
 }
 
 .class_six_branch span {
-    font-size    : 12px;
-    text-align   : center;
-    font-weight  : normal;
-    color        : #A9E17D;
-    border       : 1px solid #A9E17D;
-    padding      : 0px 1px;
-    border-radius: 2px;
+  font-size: 12px;
+  text-align: center;
+  font-weight: normal;
+  color: #a9e17d;
+  border: 1px solid #a9e17d;
+  padding: 0px 1px;
+  border-radius: 2px;
 }
 
 .class_six_topics {
-    font-size  : 14px;
-    font-weight: bold;
-    text-align : center;
-    color      : #769B9C;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  color: #769b9c;
 }
 
 .class_six_std_name {
-    font-size  : 14px;
-    font-weight: bold;
-    text-align : center;
-    color      : #B4D0D2;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  color: #b4d0d2;
 }
 
 /* class six subject end */
 /* teacher info list start */
 .teacher_info_list {
-    background-color: #9fdbdb51;
-    border-radius   : 50%;
-    padding         : 3px;
+  background-color: #9fdbdb51;
+  border-radius: 50%;
+  padding: 3px;
 }
 
 .OutlineDotsVertical {
-    background-color: #9fdbdb51;
-    border-radius   : 50%;
-    padding         : 3px;
+  background-color: #9fdbdb51;
+  border-radius: 50%;
+  padding: 3px;
 }
 
 .teacher_info_list_group {
-    width: 50%;
+  width: 50%;
 }
 
 /* teacher info list start */
 /* nav tab start */
 .nav_tab_bottom_border:hover {
-    border-bottom: 2px solid #428F92;
-    padding-top  : 0px;
+  border-bottom: 2px solid #428f92;
+  padding-top: 0px;
 }
 
 /* nav tab end */
 /* shikhon kalin mollaion start */
 .card_hover:hover {
-    background-color: #D2D2D2;
+  background-color: #d2d2d2;
 }
 
 /* shikhon kalin mollaion end */
+
+/* learning_period_assessment_btn_right start*/
+
+.page_link_hover:hover {
+  background-color: #428f92;
+  color: #fff !important;
+}
+.learning_period_assessment_btn_left {
+  border-color: #428f92;
+  color: #428f92 !important;
+  width: 18rem;
+}
+.learning_period_assessment_btn_left:hover {
+  color: #fff !important;
+  background-color: #428f92;
+}
+.learning_period_assessment_btn_right {
+  border-color: #428f92;
+  background-color: #428f92;
+  color: #fff !important;
+  width: 18rem;
+}
+.learning_period_assessment_btn_right:hover {
+  border-color: #428f92;
+  color: #428f92 !important;
+  background-color: #fff;
+}
+/*learning_period_assessment_btn_right end */
