--- a/public/assets/noipunno/css/widget/table.css
+++ b/public/assets/noipunno/css/widget/table.css
@@ -1,4 +1,4 @@
-.np-table th,td{
+/* .np-table th,td{
     padding-top: 20px !important;
     padding-bottom: 20px !important;
     min-width: 150px;
@@ -135,4 +135,4 @@
 
 .np-table .np-flag-header {
     background: var(--secondary-color-1);
-}
+} */
