--- a/src/component/Home.style.module.css
+++ b/src/component/Home.style.module.css
@@ -1,3 +1,9 @@
+.modal_center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .loading_container {
   display: flex;
   justify-content: center;
