teacher-icon-gap-added

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,12 @@
+/* #nav-toggle-topbar {
+  width: 300px !important;
+  position: absolute !important;
+  top: 3rem;
+  right: 5rem;
+
+  background-color: burlywood;
+} */
+
 .dropdown-items {
   align-items: center;
   background-color: #ffffff;
