--- a/public/assets/noipunno/css/widget/noipunno-nav.css
+++ b/public/assets/noipunno/css/widget/noipunno-nav.css
@@ -1,19 +1,19 @@
-.noipunno-dropdown {
-}
+.noipunno-dropdown {}
 
 .noipunno-dropdown::after {
     display: none;
 }
 
 .user-section {
-    width: 32px;
-    height: 32px;
+    width: 2.7rem;
+    height: 2rem;
 }
 
 .user-section img {
     width: 100%;
 }
-.noipunno-navbar-section{
+
+.noipunno-navbar-section {
     position: fixed;
     width: 100%;
     z-index: 9999;
@@ -45,53 +45,61 @@
     padding: 10px 20px;
 }
 
-.noipunno-navbar-section
-    .create-profile-dropdown-container
-    .dropdown-item:hover {
+.noipunno-navbar-section .create-profile-dropdown-container .dropdown-item:hover {
     background: var(--primary-color-2);
 }
+
 .noipunno-navbar-section hr {
     margin: 0;
 }
-.noipunno-navbar-section .pages-buttons button{
+
+.noipunno-navbar-section .pages-buttons button {
     border: none;
     background-color: transparent;
 
 }
-.noipunno-navbar-section .pages-buttons button a{
+
+.noipunno-navbar-section .pages-buttons button a {
     text-decoration: none;
     color: var(--text-primary-color)
 }
+
 .noipunno-navbar-section .pages-buttons button:active {
-    background-color: var( --primary-color-2);
+    background-color: var(--primary-color-2);
     border: none;
 }
 
-.noipunno-navbar-section .pages-buttons button a:visited{
-    background-color: var( --primary-color-2);
-  
-}
-.noipunno-navbar-section .offcanvas{
-    max-width: 300px;
-}
-.noipunno-navbar-section .subheader-accordion .accordion-button:focus{
-    box-shadow: none ;
+.noipunno-navbar-section .pages-buttons button a:visited {
+    background-color: var(--primary-color-2);
+
 }
 
-.noipunno-navbar-section .subheader-accordion .accordion-button:not(.collapsed){
+.noipunno-navbar-section .offcanvas {
+    max-width: 300px;
+}
+
+.noipunno-navbar-section .subheader-accordion .accordion-button:focus {
+    box-shadow: none;
+}
+
+.noipunno-navbar-section .subheader-accordion .accordion-button:not(.collapsed) {
     background-color: var(--primary-color-2);
 }
+
 .noipunno-navbar-section a {
     cursor: pointer;
 }
-.responsive-single-menu-button::after{
+
+.responsive-single-menu-button::after {
     visibility: hidden;
 }
-.empty-section{
+
+.empty-section {
     height: 122px;
 }
+
 @media screen and (max-width: 992px) {
- .empty-section{
-    height: 117px;
- }
-  }
+    .empty-section {
+        height: 117px;
+    }
+}
