some-work-from-home

--- a/src/component/Home.style.module.css
+++ b/src/component/Home.style.module.css
@@ -198,6 +198,10 @@
 
 /* ==============> Army <=================== */
 
+
+
+/* =====================? */
+
 .custom-input::placeholder {
   color: rgb(0, 201, 77) !important;
   background-color: burlywood;
