--- a/public/assets/noipunno/css/pages/login.css
+++ b/public/assets/noipunno/css/pages/login.css
@@ -6,7 +6,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    padding: 3%;
+    /* padding: 3%; */
     font-family: 'Inter', sans-serif
     /* min-height: 100vh; */
 }
