--- a/src/component/Home.style.module.css
+++ b/src/component/Home.style.module.css
@@ -197,16 +197,31 @@
 
 
 /* ==============> Army <=================== */
+.is-active {
+  background-color: #682773;
+}
 
-/* =============> Teacher-Profile_Edit <========= */
+
+/* =============> Teacher-List-page <========= */
 #view_containser {
   /* background-color: #69CB1C; */
   display: grid;
   grid-template-columns: 2fr 10fr;
 }
 
+#teacher_card_list:hover {
+  background-color: rgb(240, 245, 245)
+}
 
+/* =============> student-List-page <========= */
+#student_card:hover {
+  background-color: rgb(240, 245, 245)
+}
 
+/* =============> Class-Page <========= */
+#class_card:hover {
+  background-color: rgb(246, 247, 247) !important
+}
 
 /* =============>  <========= */
 .form-control:focus {
