--- a/public/assets/noipunno/css/components/button.css
+++ b/public/assets/noipunno/css/components/button.css
@@ -1,6 +1,5 @@
-.np-btn-smooth-var-1 {
+.np-btn-smooth-var-1 {}
 
-}
 .np-btn-form-submit {
     background-color: var(--primary-color-1);
     color: white;
@@ -24,7 +23,7 @@
     column-gap: 8px;
 }
 
-.np-edit-btn-small-lg{
+.np-edit-btn-small-lg {
     width: fit-content !important;
     min-width: 120px;
     color: #FFF;
@@ -33,8 +32,8 @@
     line-height: 20px;
 }
 
-.np-btnupazilla-chip{
-    background-color: var( --button-decline-color);
+.np-btnupazilla-chip {
+    background-color: var(--button-decline-color);
     color: white;
     outline: unset;
     border: unset;
