--- a/src/component/Home.style.module.css
+++ b/src/component/Home.style.module.css
@@ -585,4 +585,29 @@
   line-height: 20px;
 }
 
+.report_title {
+  color      : #222;
+  font-family: Roboto;
+  font-size  : 24px;
+  font-style : normal;
+  font-weight: 400;
+  line-height: 34px;
+}
+
+.report_icon {
+  border-radius: 30px;
+  padding      : 5px;
+  background   : #FFECEC;
+}
+
+.report {
+  color                : #222;
+  font-feature-settings: 'clig'off, 'liga'off;
+  font-family          : Noto Sans Bengali;
+  font-size            : 14px;
+  font-style           : normal;
+  font-weight          : 500;
+  line-height          : 24px;
+}
+
 /* +++++++++++++++++++++++++++++++++++++++ */
