--- a/src/component/Home.style.module.css
+++ b/src/component/Home.style.module.css
@@ -216,7 +216,89 @@
 }
 
 
-/* ==============> Army <=================== 
+/* ==============> Army <===================
+
+/* subject info */
+.subject_container h2 {
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 34px;
+  letter-spacing: 0em;
+  color: #222222;
+  padding-bottom: 10px;
+}
+
+.subject_container .subject-number {
+  /* width: 267.2px; */
+  height: 241px;
+  border-radius: 6px;
+  background-color: #fff !important;
+  box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 16px;
+}
+
+.subject_container .subject_number .icon {
+  width: 82px;
+  height: 82px;
+  padding: 8px;
+  border-radius: 49px;
+  background-color: #e4feff !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.subject_container .subject_number h2 {
+  font-family: Public Sans;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: #2d6668;
+}
+
+.subject_container .subject_number .total_student {
+  display: flex;
+}
+
+.subject_container .subject_number .total_student p {
+  font-family: Public Sans;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0px;
+  color: #7daeb0;
+}
+
+.subject_container .subject_number .total_student .number {
+  width: 27px;
+  height: 18px;
+  padding: 2px, 5px, 2px, 5px;
+  border-radius: 4px;
+  gap: 10px;
+  background-color: #f0fae9 !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5px;
+}
+
+.subject_container .subject_number .total_student .number p {
+  font-family: Public Sans;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #69cb1c;
+}
+
 
 /* backgroung-Color */
 .custom_bg_color {
