--- a/src/assets/teacherDashboard/css/app_info.css
+++ b/src/assets/teacherDashboard/css/app_info.css
@@ -10,6 +10,7 @@
   width: 44px;
   border: none;
 }
+
 .chat_app_info .app-info-icon {
   height: 24px;
   width: 24px;
@@ -20,13 +21,14 @@
   right: 30px;
   bottom: 30px;
 }
+
 .chat_app_info .popup {
   position: absolute;
   width: 257px;
   height: 360px;
   right: 0;
   bottom: 100%;
-  display: none;
+  /* display: none; */
   background-color: #ffffff;
   margin-bottom: 20px;
 }
@@ -61,7 +63,8 @@
   /* color: var(--text_dark); */
   padding-top: 5px;
 }
-.chat_app_info .popup-card-institutions ul > :first-child {
+
+.chat_app_info .popup-card-institutions ul> :first-child {
   font-weight: 700;
 }
 
@@ -70,9 +73,11 @@
   border: none;
   border-radius: 6px 6px 0px 0px;
 }
+
 .chat_app_info .popup-app-info-reserved {
   height: 22px;
 }
+
 .chat_app_info .reserved-app-info {
   font-family: Public Sans;
   font-size: 14px;
@@ -81,23 +86,28 @@
   letter-spacing: 0px;
   /* color: var(--text_dark); */
 }
+
 .chat_app_info .popup-card-body {
   padding: 0px 0px 5px 0px;
   height: 120px;
 }
+
 .chat_app_info .popup-card-icons {
   gap: 5px;
   height: 40px;
   margin-bottom: 5px;
 }
+
 .chat_app_info .popup-app-info-bottom {
   height: 105px;
 }
+
 .chat_app_info .popup-version-bottom {
   height: 58px;
   background-color: #428f92;
   border-radius: 0px 0px 6px 6px;
 }
+
 .chat_app_info .popup-version {
   padding: 19px 13px 19px 13px;
   font-family: Public Sans;
