--- a/src/component/Home.style.module.css
+++ b/src/component/Home.style.module.css
@@ -242,7 +242,7 @@
   margin-bottom: 16px;
 }
 
-.subject_container .subject_number .icon {
+.subject_container .subject_number .icon_sub {
   width: 82px;
   height: 82px;
   padding: 8px;
