--- a/src/styles/TeacherDashboard.css
+++ b/src/styles/TeacherDashboard.css
@@ -309,7 +309,7 @@ h6 {
   padding: 0 5px;
 }
 
-/* .student-chart .header .all .form-select select option {} */
+.student-chart .header .all .form-select select option {}
 
 .student-chart .chart img {
   width: 100%;
@@ -318,13 +318,11 @@ h6 {
 }
 
 .all-teacher-student-card {
-  /* background-color: #195153; */
   height: 394px;
 }
 
 .all-teacher-student-card .card-container {
-  /* background-color: #2d6668; */
-  height: 124.5px;
+  height: 91px;
   border-radius: 6px;
   background-color: #fff;
   box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
@@ -787,56 +785,9 @@ h6 {
   color: #222;
 }
 
-.teacher_list_container {
-  /* max-width: 1280px; */
-  display: grid !important;
-  grid-template-columns: repeat(5, 1fr);
-  gap: .3rem;
-}
-
-
-@media (min-width: 1200px) {
-  .teacher_list_container {
-    grid-template-columns: repeat(5, 1fr);
-    gap: .3rem;
-  }
-}
-
-@media (min-width: 992px) and (max-width: 1199.98px) {
-  .teacher_list_container {
-    grid-template-columns: repeat(4, 1fr);
-    gap: .3rem;
-  }
-}
-
-
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .teacher_list_container {
-    grid-template-columns: repeat(3, 1fr);
-    gap: .2rem;
-  }
-}
-
-
-@media (min-width: 576px) and (max-width: 767.98px) {
-
-  .teacher_list_container {
-    grid-template-columns: repeat(2, 1fr);
-    gap: .1rem;
-  }
-}
-
-
-
-@media (max-width: 575.98px) {
-  .teacher_list_container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
 .teacher-list .teacher-container {
-  width: 219.17px;
-  height: 9rem;
+  /* width: 219.17px; */
+  height: 111px;
   border-radius: 6px;
   gap: 5px;
   background-color: #fff;
