navbar and banner section complete

--- a/public/assets/teacherDashboard/css/dashboard.css
+++ b/public/assets/teacherDashboard/css/dashboard.css
@@ -38,7 +38,9 @@ body {
   --text_dark: #222222;
   --text_white: #ffffff;
 }
+
 @media (min-width: 1480px) {
+
   .container,
   .container-lg,
   .container-md,
@@ -48,6 +50,7 @@ body {
     max-width: 1440px;
   }
 }
+
 /* ============================== Teacher Dashboard ============================== */
 
 .teacher-profile {
@@ -107,6 +110,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .teacher-profile .card-header .profile-img img {
   width: 83px;
   height: 93px;
@@ -270,11 +274,13 @@ body {
   background-size: 10px 10px;
   padding: 0 5px;
 }
+
 .student-chart .header .all {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .student-chart .header .all h4 {
   font-family: Roboto;
   font-size: 10px;
@@ -302,17 +308,19 @@ body {
   background-size: 10px 10px;
   padding: 0 5px;
 }
-.student-chart .header .all .form-select select option {
-}
+
+.student-chart .header .all .form-select select option {}
 
 .student-chart .chart img {
   width: 100%;
   height: 280px;
   margin-top: 30px;
 }
+
 .all-teacher-student-card {
   height: 394px;
 }
+
 .all-teacher-student-card .card-container {
   height: 91px;
   border-radius: 6px;
@@ -321,11 +329,13 @@ body {
   padding: 15px 12px;
   margin-bottom: 10px;
 }
+
 .all-teacher-student-card .card-container .total-student {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .all-teacher-student-card .card-container .total-student .title h3 {
   color: #428f92;
   font-feature-settings: "clig" off, "liga" off;
@@ -336,6 +346,7 @@ body {
   line-height: 16px;
   text-transform: uppercase;
 }
+
 .all-teacher-student-card .card-container .total-student .title h3 span {
   color: #2d6668;
   font-feature-settings: "clig" off, "liga" off;
@@ -346,6 +357,7 @@ body {
   line-height: 16px;
   text-transform: uppercase;
 }
+
 .all-teacher-student-card .card-container .total-student .title h6 {
   display: flex;
   justify-content: center;
@@ -360,6 +372,7 @@ body {
   line-height: 20px;
   margin-top: 8px;
 }
+
 .all-teacher-student-card .card-container .total-student .circle {
   width: 50px;
   height: 50px;
@@ -370,7 +383,88 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .all-teacher-student-card .card-container .total-student .circle h5 {
+  font-family: Public Sans;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 12px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: #428f92;
+}
+
+
+/* Teacher Card */
+.teacher-student-card {
+  background-color: #69cb1c;
+  height: 394px;
+}
+
+.teacher-student-card .card-container {
+  height: 120px;
+  border-radius: 6px;
+  background-color: #fff;
+  box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
+  padding: 15px 12px;
+  margin-bottom: 10px;
+}
+
+.teacher-student-card .card-container .total-student {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.teacher-student-card .card-container .total-student .title h3 {
+  color: #428f92;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Public Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 16px;
+  text-transform: uppercase;
+}
+
+.teacher-student-card .card-container .total-student .title h3 span {
+  color: #2d6668;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Public Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+  text-transform: uppercase;
+}
+
+.teacher-student-card .card-container .total-student .title h6 {
+  display: flex;
+  justify-content: center;
+  padding: 0px 8px;
+  gap: 10px;
+  border-radius: 100px;
+  background-color: #e4feff;
+  color: #555;
+  font-family: Public Sans;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 20px;
+  margin-top: 8px;
+}
+
+.teacher-student-card .card-container .total-student .circle {
+  width: 50px;
+  height: 50px;
+  padding: 1px;
+  border-radius: 30px;
+  border: 1px solid #a9fcff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.teacher-student-card .card-container .total-student .circle h5 {
   font-family: Public Sans;
   font-size: 14px;
   font-weight: 700;
@@ -385,6 +479,7 @@ body {
 .report-container {
   margin-top: 12px;
 }
+
 .report-container h2 {
   font-family: Roboto;
   font-size: 24px;
@@ -405,6 +500,7 @@ body {
   padding: 0 12px;
   margin-bottom: 12px;
 }
+
 .student-container:hover {
   box-shadow: 0px 1px 1px 0px #00224233, 0px 0px 1px 0px #0000001a;
 }
@@ -416,6 +512,7 @@ body {
   border-radius: 30px;
   background-color: #ffecec;
 }
+
 .student-container:hover .icon {
   background-color: #f0f0f0;
 }
@@ -430,6 +527,7 @@ body {
   padding-left: 8px;
   color: #222222;
 }
+
 /* subject info */
 .subject-container h2 {
   font-family: Roboto;
@@ -440,6 +538,7 @@ body {
   color: #222222;
   padding-bottom: 10px;
 }
+
 .subject-container .subject-number {
   /* width: 267.2px; */
   height: 241px;
@@ -486,6 +585,7 @@ body {
   letter-spacing: 0px;
   color: #7daeb0;
 }
+
 .subject-container .subject-number .total-student .number {
   width: 27px;
   height: 18px;
@@ -498,6 +598,7 @@ body {
   align-items: center;
   margin-left: 5px;
 }
+
 .subject-container .subject-number .total-student .number p {
   font-family: Public Sans;
   font-size: 13px;
@@ -515,11 +616,13 @@ body {
   box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
   padding: 12px;
 }
+
 .request-container .header .title {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .request-container .header p {
   color: #555;
   font-feature-settings: "clig" off, "liga" off;
@@ -529,20 +632,24 @@ body {
   font-weight: 400;
   line-height: 20px;
 }
+
 .request-container .tab-bar {
   border-bottom: 1px solid #dee2e6;
   padding: 5px 0;
 }
+
 .request-container .tab-bar ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .request-container .tab-bar ul li a {
   display: flex;
   justify-content: start;
   align-items: center;
 }
+
 .request-container .tab-bar ul li h2 {
   font-family: Inter;
   font-size: 14px;
@@ -553,16 +660,19 @@ body {
   color: #222222;
   padding-left: 5px;
 }
+
 .request-container .tab-container {
   border-bottom: 1px solid #dee2e6;
   padding: 5px 0;
 }
+
 .request-container .tab-container .heading {
   display: flex;
   justify-content: start;
   align-items: center;
   margin-top: 12px;
 }
+
 .request-container .tab-container .heading .icon {
   width: 24px;
   height: 24px;
@@ -573,6 +683,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .request-container .tab-container .heading h2 {
   color: #222;
   font-feature-settings: "clig" off, "liga" off;
@@ -583,6 +694,7 @@ body {
   line-height: 21px;
   padding-left: 5px;
 }
+
 .request-container .tab-container .teachers {
   display: flex;
   align-items: center;
@@ -598,15 +710,18 @@ body {
   text-align: left;
   color: #555555;
 }
+
 .request-container .tab-container .class-section {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 5px 0;
 }
+
 .request-container .tab-container .class-day-section {
   display: flex;
 }
+
 .request-container .tab-container .class-day-section h6 {
   display: flex;
   padding: 0px 6px;
@@ -622,6 +737,7 @@ body {
   font-weight: 400;
   line-height: 20px;
 }
+
 .request-container .tab-container .class-section p {
   color: #555;
   font-feature-settings: "clig" off, "liga" off;
@@ -656,6 +772,7 @@ body {
   color: #428f92;
   cursor: pointer;
 }
+
 .request-container .button a:hover {
   color: #428f92;
 }
@@ -670,11 +787,13 @@ body {
   box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
   padding: 16px;
 }
+
 .proficiency-container .title {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .proficiency-container .title h3 {
   font-family: Public Sans;
   font-size: 22px;
@@ -684,6 +803,7 @@ body {
   text-align: left;
   color: #222222;
 }
+
 .proficiency-container .pl-container .pl-primary {
   width: 10px;
   height: 10px;
@@ -691,6 +811,7 @@ body {
   border-radius: 50%;
   margin-right: 5px;
 }
+
 .proficiency-container .pl-container .pl-secondary {
   width: 10px;
   height: 10px;
@@ -698,6 +819,7 @@ body {
   border-radius: 50%;
   margin-right: 5px;
 }
+
 .proficiency-container .pl-container h4 {
   font-family: Public Sans;
   font-size: 13px;
@@ -706,6 +828,7 @@ body {
   letter-spacing: 0px;
   text-align: left;
 }
+
 .proficiency-container img {
   width: 100%;
   height: 284px;
@@ -713,14 +836,15 @@ body {
 }
 
 /* teacher list */
-.teacher-list {
-}
+.teacher-list {}
+
 .teacher-list .title {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 10px 0;
 }
+
 .teacher-list .title h3 {
   font-family: Roboto;
   font-size: 24px;
@@ -730,6 +854,7 @@ body {
   text-align: center;
   color: #222;
 }
+
 .teacher-list .title a {
   font-family: Roboto;
   font-size: 16px;
@@ -739,6 +864,7 @@ body {
   text-align: center;
   color: #222;
 }
+
 .teacher-list .teacher-container {
   /* width: 219.17px; */
   height: 111px;
@@ -748,6 +874,7 @@ body {
   box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
   position: relative;
 }
+
 .teacher-list .teacher-container .card-top-icon {
   width: 22px;
   height: 22px;
@@ -762,20 +889,24 @@ body {
   top: 5px;
   right: 5px;
 }
+
 .teacher-list .teacher-container .card-top-icon img {
   width: 10px;
   height: 9.92px;
 }
+
 .teacher-list .teacher-container .teacher {
   display: flex;
   justify-content: start;
   align-items: center;
   padding: 8px 16px;
 }
+
 .teacher-list .teacher-container .teacher img {
   width: 51px;
   height: 57px;
 }
+
 .teacher-list .teacher-container .teacher h3 {
   font-family: Roboto;
   font-size: 12px;
@@ -786,6 +917,7 @@ body {
   padding-left: 10px;
   margin-top: 6px;
 }
+
 .teacher-list .teacher-container .teacher h4 {
   font-family: Roboto;
   font-size: 10px;
@@ -795,18 +927,21 @@ body {
   color: #555555;
   padding-left: 10px;
 }
+
 .teacher-list .teacher-container .subjects {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 6px;
 }
+
 .teacher-list .teacher-container .subjects .subject {
   height: 20px;
   border-radius: 4px;
   border: 1px solid #e4feff;
   gap: 8px;
 }
+
 .teacher-list .teacher-container .subjects .subject h3 {
   font-family: Inter;
   font-size: 10px;
@@ -816,6 +951,7 @@ body {
   color: #00a1a1;
   padding: 0 6px;
 }
+
 /* class routine */
 .class-routine-container {
   margin: 16px 0;
@@ -825,30 +961,26 @@ body {
   background-color: #fff;
   box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
 }
+
 .class-routine-container .class-routine-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-bottom: 24px;
 }
+
 .class-routine-container .class-routine-header .class-routine-selector {
   display: flex;
   align-items: center;
 }
-.class-routine-container
-  .class-routine-header
-  .class-routine-selector
-  .timeline {
+
+.class-routine-container .class-routine-header .class-routine-selector .timeline {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.class-routine-container
-  .class-routine-header
-  .class-routine-selector
-  .timeline
-  h4 {
+.class-routine-container .class-routine-header .class-routine-selector .timeline h4 {
   font-family: Roboto;
   font-size: 12px;
   font-weight: 600;
@@ -858,11 +990,7 @@ body {
   padding-right: 12px;
 }
 
-.class-routine-container
-  .class-routine-header
-  .class-routine-selector
-  .timeline
-  .form-select {
+.class-routine-container .class-routine-header .class-routine-selector .timeline .form-select {
   width: auto;
   height: 48px;
   padding: 8px, 16px, 8px, 16px;
@@ -877,11 +1005,13 @@ body {
   letter-spacing: 0.0225em;
   text-align: left;
 }
+
 .class-routine-container .class-routine-header .class-routine-selector .all {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .class-routine-container .class-routine-header .class-routine-selector .all h4 {
   font-family: Roboto;
   font-size: 12px;
@@ -892,10 +1022,7 @@ body {
   padding: 0 12px;
 }
 
-.class-routine-container
-  .class-routine-header
-  .class-routine-selector
-  .form-select {
+.class-routine-container .class-routine-header .class-routine-selector .form-select {
   width: auto;
   height: 48px;
   padding: 8px, 16px, 8px, 16px;
@@ -910,6 +1037,7 @@ body {
   letter-spacing: 0.0225em;
   text-align: left;
 }
+
 .class-routine-container .tabbar {
   height: 46px;
   border-radius: 6px;
@@ -918,17 +1046,20 @@ body {
   box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
   margin: 24px 0;
 }
+
 .class-routine-container .tabbar ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding-top: 6px;
 }
+
 .class-routine-container .tabbar ul li a {
   display: flex;
   justify-content: start;
   align-items: center;
 }
+
 .class-routine-container .tabbar ul li a h3 {
   font-family: Inter;
   font-size: 14px;
@@ -944,6 +1075,7 @@ body {
   display: flex;
   margin-right: 12px;
 }
+
 .class-routine-container .routine-section .title {
   height: 32px;
   border-radius: 16px;
@@ -957,9 +1089,11 @@ body {
   cursor: pointer;
   margin: 12px 12px;
 }
+
 .class-routine-container .routine-section .title:hover {
   background-color: #428f92;
 }
+
 .class-routine-container .routine-section .title h6 {
   font-family: Inter;
   font-size: 14px;
@@ -969,9 +1103,11 @@ body {
   text-align: left;
   color: #222222;
 }
+
 .class-routine-container .routine-section .title h6:hover {
   color: #fff;
 }
+
 .class-routine-table .tab-th-style {
   font-family: Roboto;
   font-size: 14px;
@@ -981,12 +1117,15 @@ body {
   background-color: #f0f9f9;
   padding: 18px 16px;
 }
+
 .class-routine-table .nav-link.active {
   border-bottom: 2px solid var(--bg_primary);
 }
-.table > :not(:last-child) > :last-child > * {
+
+.table> :not(:last-child)> :last-child>* {
   border-bottom-color: #e5e5e5;
 }
+
 .class-routine-table .tab-first-td-style {
   font-family: Roboto;
   font-size: 14px;
@@ -997,6 +1136,7 @@ body {
   padding: 18px 16px;
   min-width: 100px;
 }
+
 .class-routine-table .tab-td-style {
   font-family: Roboto;
   font-size: 14px;
@@ -1005,4 +1145,5 @@ body {
   letter-spacing: 0em;
   padding: 18px 16px;
 }
+
 /* ============================= /Teacher Dashboard ============================== ==================================================================================*/
