all garvage cose remove

--- a/src/assets/dashboard_materials/css/dashboard.css
+++ b/src/assets/dashboard_materials/css/dashboard.css
@@ -20,11 +20,6 @@ h6 {
   text-decoration: none;
 }
 
-body {
-  background-color: #ffffff;
-  font-family: 'Roboto';
-}
-
 :root {
   /* color */
   --bg_primary_dark: #2d6668;
@@ -38,7 +33,9 @@ body {
   --text_dark: #222222;
   --text_white: #ffffff;
 }
+
 @media (min-width: 1480px) {
+
   .container,
   .container-lg,
   .container-md,
@@ -48,6 +45,7 @@ body {
     max-width: 1440px;
   }
 }
+
 /* ============================== Teacher Dashboard ============================== */
 
 .teacher-profile {
@@ -107,6 +105,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .teacher-profile .card-header .profile-img img {
   width: 83px;
   height: 93px;
@@ -270,11 +269,13 @@ body {
   background-size: 10px 10px;
   padding: 0 5px;
 }
+
 .student-chart .header .all {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .student-chart .header .all h4 {
   font-family: Roboto;
   font-size: 10px;
@@ -302,17 +303,19 @@ body {
   background-size: 10px 10px;
   padding: 0 5px;
 }
-.student-chart .header .all .form-select select option {
-}
+
+.student-chart .header .all .form-select select option {}
 
 .student-chart .chart img {
   width: 100%;
   height: 280px;
   margin-top: 30px;
 }
+
 .all-teacher-student-card {
   height: 394px;
 }
+
 .all-teacher-student-card .card-container {
   height: 91px;
   border-radius: 6px;
@@ -321,11 +324,13 @@ body {
   padding: 15px 12px;
   margin-bottom: 10px;
 }
+
 .all-teacher-student-card .card-container .total-student {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .all-teacher-student-card .card-container .total-student .title h3 {
   color: #428f92;
   font-feature-settings: 'clig' off, 'liga' off;
@@ -336,6 +341,7 @@ body {
   line-height: 16px;
   text-transform: uppercase;
 }
+
 .all-teacher-student-card .card-container .total-student .title h3 span {
   color: #2d6668;
   font-feature-settings: 'clig' off, 'liga' off;
@@ -346,6 +352,7 @@ body {
   line-height: 16px;
   text-transform: uppercase;
 }
+
 .all-teacher-student-card .card-container .total-student .title h6 {
   display: flex;
   justify-content: center;
@@ -360,6 +367,7 @@ body {
   line-height: 20px;
   margin-top: 8px;
 }
+
 .all-teacher-student-card .card-container .total-student .circle {
   width: 50px;
   height: 50px;
@@ -370,6 +378,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .all-teacher-student-card .card-container .total-student .circle h5 {
   font-family: Public Sans;
   font-size: 14px;
@@ -385,6 +394,7 @@ body {
 .report-container {
   margin-top: 12px;
 }
+
 .report-container h2 {
   font-family: Roboto;
   font-size: 24px;
@@ -405,6 +415,7 @@ body {
   padding: 0 12px;
   margin-bottom: 12px;
 }
+
 .student-container:hover {
   box-shadow: 0px 1px 1px 0px #00224233, 0px 0px 1px 0px #0000001a;
 }
@@ -416,6 +427,7 @@ body {
   border-radius: 30px;
   background-color: #ffecec;
 }
+
 .student-container:hover .icon {
   background-color: #f0f0f0;
 }
@@ -430,6 +442,7 @@ body {
   padding-left: 8px;
   color: #222222;
 }
+
 /* subject info */
 .subject-container h2 {
   font-family: Roboto;
@@ -440,6 +453,7 @@ body {
   color: #222222;
   padding-bottom: 10px;
 }
+
 .subject-container .subject-number {
   /* width: 267.2px; */
   height: 241px;
@@ -486,6 +500,7 @@ body {
   letter-spacing: 0px;
   color: #7daeb0;
 }
+
 .subject-container .subject-number .total-student .number {
   width: 27px;
   height: 18px;
@@ -498,6 +513,7 @@ body {
   align-items: center;
   margin-left: 5px;
 }
+
 .subject-container .subject-number .total-student .number p {
   font-family: Public Sans;
   font-size: 13px;
@@ -515,11 +531,13 @@ body {
   box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
   padding: 12px;
 }
+
 .request-container .header .title {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .request-container .header p {
   color: #555;
   font-feature-settings: 'clig' off, 'liga' off;
@@ -529,24 +547,29 @@ body {
   font-weight: 400;
   line-height: 20px;
 }
+
 .request-container .tab-bar {
   border-bottom: 1px solid #dee2e6;
   padding: 5px 0;
 }
+
 .request-container .tab-bar ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .request-container .tab-bar .nav-link.active {
   border-bottom: 2px solid var(--bg_primary);
 }
+
 .request-container .tab-bar ul li a {
   display: flex;
   justify-content: start;
   align-items: center;
   cursor: pointer;
 }
+
 .request-container .tab-bar ul li h2 {
   font-family: Inter;
   font-size: 14px;
@@ -557,16 +580,19 @@ body {
   color: #222222;
   padding-left: 5px;
 }
+
 .request-container .tab-container {
   border-bottom: 1px solid #dee2e6;
   padding: 5px 0;
 }
+
 .request-container .tab-container .heading {
   display: flex;
   justify-content: start;
   align-items: center;
   margin-top: 12px;
 }
+
 .request-container .tab-container .heading .icon {
   width: 24px;
   height: 24px;
@@ -577,6 +603,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .request-container .tab-container .heading h2 {
   color: #222;
   font-feature-settings: 'clig' off, 'liga' off;
@@ -587,6 +614,7 @@ body {
   line-height: 21px;
   padding-left: 5px;
 }
+
 .request-container .tab-container .teachers {
   display: flex;
   align-items: center;
@@ -602,15 +630,18 @@ body {
   text-align: left;
   color: #555555;
 }
+
 .request-container .tab-container .class-section {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 5px 0;
 }
+
 .request-container .tab-container .class-day-section {
   display: flex;
 }
+
 .request-container .tab-container .class-day-section h6 {
   display: flex;
   padding: 0px 6px;
@@ -626,6 +657,7 @@ body {
   font-weight: 400;
   line-height: 20px;
 }
+
 .request-container .tab-container .class-section p {
   color: #555;
   font-feature-settings: 'clig' off, 'liga' off;
@@ -660,6 +692,7 @@ body {
   color: #428f92;
   cursor: pointer;
 }
+
 .request-container .button a:hover {
   color: #428f92;
 }
@@ -674,11 +707,13 @@ body {
   box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
   padding: 16px;
 }
+
 .proficiency-container .title {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .proficiency-container .title h3 {
   font-family: Public Sans;
   font-size: 22px;
@@ -688,6 +723,7 @@ body {
   text-align: left;
   color: #222222;
 }
+
 .proficiency-container .pl-container .pl-primary {
   width: 10px;
   height: 10px;
@@ -695,6 +731,7 @@ body {
   border-radius: 50%;
   margin-right: 5px;
 }
+
 .proficiency-container .pl-container .pl-secondary {
   width: 10px;
   height: 10px;
@@ -702,6 +739,7 @@ body {
   border-radius: 50%;
   margin-right: 5px;
 }
+
 .proficiency-container .pl-container h4 {
   font-family: Public Sans;
   font-size: 13px;
@@ -710,6 +748,7 @@ body {
   letter-spacing: 0px;
   text-align: left;
 }
+
 .proficiency-container img {
   width: 100%;
   height: 284px;
@@ -717,14 +756,15 @@ body {
 }
 
 /* teacher list */
-.teacher-list {
-}
+.teacher-list {}
+
 .teacher-list .title {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 10px 0;
 }
+
 .teacher-list .title h3 {
   font-family: Roboto;
   font-size: 24px;
@@ -734,6 +774,7 @@ body {
   text-align: center;
   color: #222;
 }
+
 .teacher-list .title a {
   font-family: Roboto;
   font-size: 16px;
@@ -743,6 +784,7 @@ body {
   text-align: center;
   color: #222;
 }
+
 .teacher-list .teacher-container {
   /* width: 219.17px; */
   height: 111px;
@@ -752,6 +794,7 @@ body {
   box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
   position: relative;
 }
+
 .teacher-list .teacher-container .card-top-icon {
   width: 22px;
   height: 22px;
@@ -766,20 +809,24 @@ body {
   top: 5px;
   right: 5px;
 }
+
 .teacher-list .teacher-container .card-top-icon img {
   width: 10px;
   height: 9.92px;
 }
+
 .teacher-list .teacher-container .teacher {
   display: flex;
   justify-content: start;
   align-items: center;
   padding: 8px 16px;
 }
+
 .teacher-list .teacher-container .teacher img {
   width: 51px;
   height: 57px;
 }
+
 .teacher-list .teacher-container .teacher h3 {
   font-family: Roboto;
   font-size: 12px;
@@ -790,6 +837,7 @@ body {
   padding-left: 10px;
   margin-top: 6px;
 }
+
 .teacher-list .teacher-container .teacher h4 {
   font-family: Roboto;
   font-size: 10px;
@@ -799,18 +847,21 @@ body {
   color: #555555;
   padding-left: 10px;
 }
+
 .teacher-list .teacher-container .subjects {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 6px;
 }
+
 .teacher-list .teacher-container .subjects .subject {
   height: 20px;
   border-radius: 4px;
   border: 1px solid #e4feff;
   gap: 8px;
 }
+
 .teacher-list .teacher-container .subjects .subject h3 {
   font-family: Inter;
   font-size: 10px;
@@ -820,6 +871,7 @@ body {
   color: #00a1a1;
   padding: 0 6px;
 }
+
 /* class routine */
 .class-routine-container {
   margin-top: 13px;
@@ -829,12 +881,14 @@ body {
   background-color: #fff;
   box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
 }
+
 .class-routine-container .class-routine-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-bottom: 16px;
 }
+
 .class-routine-container .class-routine-header .class_routine {
   font-family: Public Sans;
   font-size: 22px;
@@ -842,24 +896,19 @@ body {
   line-height: 30px;
   letter-spacing: 0px;
 }
+
 .class-routine-container .class-routine-header .class-routine-selector {
   display: flex;
   align-items: center;
 }
-.class-routine-container
-  .class-routine-header
-  .class-routine-selector
-  .timeline {
+
+.class-routine-container .class-routine-header .class-routine-selector .timeline {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.class-routine-container
-  .class-routine-header
-  .class-routine-selector
-  .timeline
-  h4 {
+.class-routine-container .class-routine-header .class-routine-selector .timeline h4 {
   font-family: Roboto;
   font-size: 12px;
   font-weight: 600;
@@ -869,11 +918,7 @@ body {
   padding-right: 12px;
 }
 
-.class-routine-container
-  .class-routine-header
-  .class-routine-selector
-  .timeline
-  .form-select {
+.class-routine-container .class-routine-header .class-routine-selector .timeline .form-select {
   width: auto;
   height: 48px;
   padding: 8px, 16px, 8px, 16px;
@@ -887,11 +932,13 @@ body {
   line-height: 24px;
   letter-spacing: 0.0225em;
 }
+
 .class-routine-container .class-routine-header .class-routine-selector .all {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .class-routine-container .class-routine-header .class-routine-selector .all h4 {
   font-family: Roboto;
   font-size: 12px;
@@ -902,10 +949,7 @@ body {
   padding: 0 12px;
 }
 
-.class-routine-container
-  .class-routine-header
-  .class-routine-selector
-  .form-select {
+.class-routine-container .class-routine-header .class-routine-selector .form-select {
   width: auto;
   height: 48px;
   padding: 8px, 16px, 8px, 16px;
@@ -920,6 +964,7 @@ body {
   letter-spacing: 0.0225em;
   text-align: left;
 }
+
 .class-routine-container .tabbar {
   height: 46px;
   border-radius: 6px;
@@ -928,17 +973,20 @@ body {
   box-shadow: 0px 2px 3px 0px #0000001a, 0px 0px 1px 0px #0000001a;
   margin: 24px 0;
 }
+
 .class-routine-container .tabbar ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding-top: 6px;
 }
+
 .class-routine-container .tabbar ul li a {
   display: flex;
   justify-content: start;
   align-items: center;
 }
+
 .class-routine-container .tabbar ul li a h3 {
   font-family: Inter;
   font-size: 14px;
@@ -954,9 +1002,11 @@ body {
   display: flex;
   margin: 16px 0px 16px 0px;
 }
+
 .class-routine-container .routine-section ul {
   gap: 10px;
 }
+
 .class-routine-container .routine-section .class-section {
   padding: 4px 12px;
   border-radius: 16px;
@@ -966,10 +1016,12 @@ body {
 .routine-section .nav-item .nav-link {
   color: var(--text_dark);
 }
+
 .routine-section .nav-item.active {
   border-bottom: none;
   background-color: var(--bg_primary);
 }
+
 .routine-section .nav-item.active a {
   color: var(--text_white);
 }
@@ -983,6 +1035,7 @@ body {
   letter-spacing: 0em;
   color: var(--text_dark);
 }
+
 .dataTables_filter label {
   font-size: 16px;
   margin: 16px 0px 16px 0px;
@@ -992,6 +1045,7 @@ body {
   letter-spacing: 0em;
   color: var(--text_dark);
 }
+
 .pagination .page-item a {
   color: var(--text_dark);
 }
@@ -1005,40 +1059,46 @@ body {
   letter-spacing: 0em;
   color: var(--text_dark);
 }
+
 .dataTables_info {
   font-size: 16px;
   margin: 16px 0px 16px 0px !important;
 }
+
 .previous a {
   font-size: 16px;
   color: var(--bg_primary);
 }
+
 .page-item.active .page-link {
   background-color: var(--bg_primary);
   color: var(--text_white);
 }
+
 .next a {
   font-size: 16px;
   color: var(--bg_primary);
 }
+
 .class-routine-container .class-routine-table {
   padding: 16px 0px 16px 0px;
 }
+
 .class-routine-container .class-routine-table .class-routine-table-tab-nav {
   background-color: #dddddd54;
   border-radius: 6px;
   line-height: 22px;
 }
-.class-routine-container
-  .class-routine-table
-  .class-routine-table-tab-nav
-  .gap-distance {
+
+.class-routine-container .class-routine-table .class-routine-table-tab-nav .gap-distance {
   gap: 10px;
 }
+
 .class-routine-container .class-routine-table .class-routine-table-tab-nav a {
   color: #555555;
   font-size: 14px;
 }
+
 .class-routine-table .tab-th-style {
   font-family: Roboto;
   font-size: 14px;
@@ -1052,9 +1112,11 @@ body {
 .class-routine-table .nav-link.active {
   border-bottom: 2px solid var(--bg_primary);
 }
-.table > :not(:last-child) > :last-child > * {
+
+.table> :not(:last-child)> :last-child>* {
   border-bottom-color: #e5e5e5;
 }
+
 .class-routine-table .tab-first-td-style {
   font-family: Roboto;
   font-size: 14px;
@@ -1065,6 +1127,7 @@ body {
   padding: 18px 16px;
   min-width: 100px;
 }
+
 .class-routine-table .tab-td-style {
   font-family: Roboto;
   font-size: 14px;
@@ -1073,4 +1136,5 @@ body {
   letter-spacing: 0em;
   padding: 18px 16px;
 }
+
 /* ============================= /Teacher Dashboard ============================== ==================================================================================*/
