--- a/src/assets/dashboard_materials/css/public.css
+++ b/src/assets/dashboard_materials/css/public.css
@@ -19,16 +19,15 @@ h6 {
   padding: 0;
   text-decoration: none;
 }
+
 .min-vh-90-100 {
   height: calc(100vh - 100px);
 }
+
 .max-width-540 {
   max-width: 540px;
 }
-body {
-  font-family: "Roboto";
-  box-sizing: border-box;
-}
+
 
 :root {
   /* color */
@@ -49,12 +48,14 @@ body {
 .login-page {
   background: linear-gradient(180deg, #befdff 0%, #a2f3f5 100%);
 }
+
 .login-bg {
   background-size: auto;
   background-position: center top;
   background-repeat: no-repeat;
   background-image: url(/assets/images/LoginbgImage.svg);
 }
+
 .marque-notification {
   font-size: 14px;
   font-weight: 800;
@@ -62,23 +63,28 @@ body {
   max-width: 1000px;
   margin: 0 auto;
   position: relative;
-  transition: top 2s ease 0s; /* only transition top property */
-  top: 20px; /* start transitioning from position '0' instead of 'auto' */
+  transition: top 2s ease 0s;
+  /* only transition top property */
+  top: 20px;
+  /* start transitioning from position '0' instead of 'auto' */
   padding: 4px 0;
   color: #0e7e7e;
   background-color: #ffffff;
   border-radius: 30px;
   padding-bottom: 0px;
 }
+
 .loginLogo {
   height: 95px;
   width: 226px;
 }
+
 .login-page .loginCard {
   border-radius: 6px;
   padding: 60px 80px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+
 .teacher-login-title {
   color: var(--text_dark);
   font-size: 30px;
@@ -98,6 +104,7 @@ body {
   letter-spacing: 0em;
   text-align: left;
 }
+
 .login-title {
   font-size: 26px;
   font-weight: 700;
@@ -107,6 +114,7 @@ body {
   color: var(--text_blue_dark);
   font-family: Noto Sans Bengali;
 }
+
 .login-container {
   padding-top: 6%;
   padding-bottom: 4%;
@@ -147,6 +155,7 @@ body {
   width: 20px;
   color: var(--text_dark);
 }
+
 .collect-pin {
   font-family: Noto Sans Bengali;
   font-size: 14px;
@@ -156,9 +165,11 @@ body {
   text-align: left;
   color: #5e6278;
 }
+
 .collect-pin input {
   color: var(--text_secondary_dark);
 }
+
 .login-btn {
   background-color: var(--bg_primary);
   color: var(--text_white);
@@ -177,14 +188,17 @@ body {
   letter-spacing: 0em;
   color: #5e6278;
 }
+
 .forget-password:hover {
   color: var(--bg_primary_dark);
 }
+
 /* --------- */
 .form-check-input:checked {
   background-color: var(--text_secondary_dark) !important;
   border: 0;
 }
+
 .form-check-input:focus,
 .label::after,
 label.form-check-label:focus,
@@ -195,6 +209,7 @@ label.form-check-label:focus,
   border: 0;
   box-shadow: 0 0 0 0.1rem var(--text_primary_dark) !important;
 }
+
 /* --------- */
 .np-login-form-field {
   border-radius: 5px !important;
@@ -232,4 +247,5 @@ label.form-check-label:focus,
 .footer-menus {
   font-size: 12px;
 }
+
 /* ---------login page end------------------- */
