--- a/src/index.css
+++ b/src/index.css
@@ -24,13 +24,13 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+} */
 
 h1 {
   font-size: 3.2em;
@@ -305,4 +305,3 @@ table th {
 }
 
 /* +++++++++++++++++++++++++++++++++++++++ */
-
