--- a/src/assets/navbar_materials/navbar.css
+++ b/src/assets/navbar_materials/navbar.css
@@ -1,3 +1,23 @@
+:root {
+  /* color */
+  --bg_primary_dark: #2d6668;
+  --bg_primary: #428f92;
+  --bg_secondary: #a9fcff;
+  --bg_success: #f0fae9;
+  --text_primary_dark: #2d6668;
+  --text_secondary_dark: #0e7e7e;
+  --text_primary_fade: #7daeb0;
+  --text_success: #69cb1c;
+  --text_dark: #222222;
+  --text_white: #ffffff;
+  --text_blue_dark: #181c32;
+}
+
+#mollayon_koron_btn {
+  color: var(--text_white);
+}
+
+
 /* topnav bar start */
 .topnav {
   background-color: #ffffff;
@@ -173,426 +193,3 @@
 }
 
 /* nav bar end */
-
-/* footer start */
-.footer-text-padding {
-  padding: 12px 0px 12px 0px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  letter-spacing: 0px;
-  text-align: left;
-  font-family: Noto Sans Bengali;
-  margin-top: 26px;
-}
-
-.footer-list-items {
-  text-decoration: none;
-  color: var(--text_dark);
-}
-
-.footer-list-items:hover {
-  color: #4b465c;
-}
-
-/* footer end */
-/* app info start */
-.app-info-btn {
-  background-color: var(--bg_primary);
-  box-shadow: 0px 2px 3px 0px #0000001a;
-  padding: 10px;
-  cursor: pointer;
-  border-radius: 50%;
-  gap: 10px;
-  height: 44px;
-  width: 44px;
-  border: none;
-}
-
-.app-info-icon {
-  height: 24px;
-  width: 24px;
-}
-
-.chat_box {
-  position: fixed;
-  right: 30px;
-  bottom: 30px;
-  z-index: 99;
-}
-
-.popup {
-  position: absolute;
-  width: 257px;
-  height: 358px;
-  border-radius: 6px;
-  right: 0;
-  bottom: 100%;
-  display: none;
-  background-color: var(--text_white);
-  margin-bottom: 20px;
-}
-
-.popup:after {
-  content: "";
-  width: 0;
-  height: 0;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-top: 10px solid var(--bg_primary);
-  position: absolute;
-  bottom: -18px;
-  right: 15px;
-  z-index: 99;
-}
-
-.popup-app-info-top {
-  height: 300px;
-  padding: 20px;
-  border: 1px solid #93f0f3;
-  border-radius: 6px 6px 0px 0px;
-}
-
-.popup-card-institutions {
-  font-family: Noto Sans Bengali;
-  font-size: 11px;
-  font-weight: 400;
-  height: 60px;
-  letter-spacing: 0px;
-  color: var(--text_dark);
-  padding-top: 5px;
-}
-
-.popup-card-institutions ul> :first-child {
-  font-weight: 700;
-}
-
-.chat_btn {
-  border: none;
-  border-radius: 6px 6px 0px 0px;
-}
-
-.popup-app-info-reserved {
-  height: 22px;
-}
-
-.reserved-app-info {
-  font-family: Public Sans;
-  font-size: 14px;
-  font-weight: 400;
-  height: 19px;
-  letter-spacing: 0px;
-  /* color: var(--text_dark); */
-}
-
-.popup-card-body {
-  padding: 0px 0px 5px 0px;
-  height: 120px;
-}
-
-.popup-card-icons {
-  gap: 5px;
-  height: 40px;
-  margin-bottom: 5px;
-}
-
-.popup-app-info-bottom {
-  height: 105px;
-}
-
-.popup-version-bottom {
-  height: 58px;
-  background-color: var(--bg_primary);
-  border-radius: 0px 0px 6px 6px;
-}
-
-.popup-version {
-  padding: 19px 13px 19px 13px;
-  font-family: Public Sans;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  letter-spacing: 0px;
-  text-align: center;
-}
-
-.popup-version-info {
-  font-family: Public Sans;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  letter-spacing: 0px;
-  text-align: center;
-  color: var(--text_white);
-}
-
-/* app info end */
-
-/* media query start */
-@media screen and (max-width: 480px) {
-  .nav-item-style {
-    max-width: 210px;
-  }
-
-  .dropdown-menu-item-style {
-    width: 210px;
-  }
-}
-
-
-/* reportCard start */
-.reportHeader {
-  height: 62px;
-  margin-top: 16px;
-  margin-bottom: 13px;
-}
-
-.reportHeader .reportHeaderLeft {
-  border-radius: 6px;
-  background: var(--surface-forground-background, #fff);
-  box-shadow: 0px 2px 4px 0px rgba(165, 163, 174, 0.3);
-  display: flex;
-  width: 62px;
-  height: 62px;
-  padding: 12px 24px;
-  justify-content: center;
-  align-items: center;
-  margin-right: 5px;
-}
-
-.reportHeader .reportHeaderLeftIcon {
-  width: 9.463px;
-  height: 21.12px;
-}
-
-.reportHeader .reportHeaderRight {
-  border-radius: 6px;
-  background: var(--surface-forground-background, #fff);
-  box-shadow: 0px 2px 4px 0px rgba(165, 163, 174, 0.3);
-  height: 62px;
-  width: 100%;
-  padding: 12px 24px;
-  margin-left: 5px;
-}
-
-.reportHeader .reportHeader-book-icon {
-  display: flex;
-  padding: 6px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  border-radius: 2px;
-  border: 1px solid var(--primary-30, #a9fcff);
-  background: var(--primary-10, #e4feff);
-  margin-right: 5px;
-}
-
-.reportHeader .transcriptHeader {
-  margin-left: 5px;
-}
-
-.reportHeader .transcriptHeaderAssesment {
-  color: #555;
-  font-feature-settings: "clig" off, "liga" off;
-  font-family: Noto Sans Bengali;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 20px;
-}
-
-@media screen and (min-width: 320px) and (max-width: 375.98px) {
-  .reportHeader .transcriptHeaderAssesment {
-    font-size: 12px;
-  }
-}
-
-.reportHeader .dashboard-data {
-  color: #555;
-  font-feature-settings: "clig" off, "liga" off;
-  font-family: Noto Sans Bengali;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 20px;
-  gap: 4px;
-}
-
-.reportHeader .dashboard-data .data {
-  color: #888;
-  font-feature-settings: "clig" off, "liga" off;
-  font-family: Noto Sans Bengali;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 12px;
-}
-
-.reportHeader .dashboard {
-  color: #428f92;
-  font-feature-settings: "clig" off, "liga" off;
-  font-family: Noto Sans Bengali;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 12px;
-}
-
-.reportHeader .favourite-icon {
-  width: 24px;
-  height: 24px;
-  margin-right: 8px;
-}
-
-.reportHeader .vertical-line {
-  width: 24px;
-  height: 24px;
-  margin-left: 8px;
-}
-
-/* reportCard end */
-
-/* form design start */
-.form-design {
-  background-color: #e4feff;
-  margin-top: 13px;
-  padding: 19px 24px;
-}
-
-.form-design .form-label {
-  font-family: Inter;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 26px;
-  letter-spacing: 0.0225em;
-  text-align: left;
-  color: var(--text_dark);
-  margin-bottom: 3px;
-}
-
-.form-design .form-select {
-  height: 48px;
-  padding: 11px 26px;
-  margin: 3px 0px 3px 0px;
-  border-radius: 4px;
-}
-
-.select-option {
-  padding: 5px 0px;
-}
-
-.assesment-btn {
-  margin-top: 37px;
-  height: 46px;
-  background-color: var(--bg_primary);
-  color: var(--text_white);
-  line-height: 1.1;
-}
-
-.assesment-btn img {
-  height: 20px;
-  width: 20px;
-}
-
-.assesment-btn:hover {
-  background-color: var(--bg_primary);
-  color: var(--text_blue_dark);
-}
-
-
-
-/* all subject start */
-.all-subjects {
-  margin: 7px 0px;
-}
-
-.all-subjects .books {
-  padding: 0px 10px;
-}
-
-.all-subjects .books-icon {
-  display: flex;
-  width: 24px;
-  height: 24px;
-  justify-content: center;
-  align-items: center;
-  padding: 0px 5px;
-}
-
-/* all subject end */
-
-/* assessment-report-cards start */
-.assessment-report-cards {
-  padding: 20px;
-}
-
-.assessment-report-cards p {
-  color: var(--text-regular, #222);
-  font-family: Noto Sans Bengali;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 28px;
-}
-
-.assessment-report-cards h6 {
-  color: var(--text-regular, #222);
-  font-family: Noto Sans Bengali;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 28px;
-  /* 155.556% */
-}
-
-/* assessment-report-cards end */
-
-/* report-download-bar start */
-.report-download-bar {
-  margin: 10px 0px;
-}
-
-.report-download-bar .student-name {
-  color: #222;
-  font-family: Roboto;
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 38px;
-}
-
-.report-download-bar .student-rollno {
-  color: var(--text-regular, #222);
-  font-family: Roboto;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 30px;
-}
-
-.report-download-bar .download-bg-style {
-  border-radius: 4px;
-  background: #e4feff;
-  height: 48px;
-  padding: 8px 16px;
-  gap: 10px;
-}
-
-.report-download-bar .download-bg-style .download-img {
-  width: 20px;
-  height: 20px;
-  display: flex;
-  align-items: center;
-  margin-top: 5px;
-}
-
-.report-download-bar .download-btn-icon {
-  border-radius: 100px;
-  background: var(--color-warning-10, #fffae6);
-  display: flex;
-  width: 48px;
-  height: 48px;
-  justify-content: center;
-  align-items: center;
-}
