--- a/src/styles/noipunno_custom_styles.css
+++ b/src/styles/noipunno_custom_styles.css
@@ -13,6 +13,7 @@
 }
 
 .student_list_page {
+  height: 100vh;
   background-color: #efefef !important;
 }
 
@@ -24,6 +25,12 @@
   height: 100vh;
   background-color: #efefef !important;
 }
+
+.faq_page_bg_color {
+  height: 100vh;
+  background-color: #efefef !important;
+}
+
 
 .teacher_compo_bg {
   background-color: #efefef !important;
